increased height of hero image as per feedback to prevent overflowing

--- a/sprint-3/scss/shows.scss
+++ b/sprint-3/scss/shows.scss
@@ -2,7 +2,7 @@
 
 .shows-background{
     background: linear-gradient(rgba(0,0,0,0.50)), url(../Assets/Images/shows-cover.jpg) left 10% bottom 42%/cover no-repeat border-box;
-    height: 38rem;
+    height: 42rem;
     color: $white-color;
     display: flex;
     flex-direction: column;
